# domdb

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
docs/: api.md  contributing.md  index.md  installation.md  output.md  usage.md
docs/assets/: cases.bib  cases_short.bib
domdb/: cli.py  download_verdicts.py  json2bib.py
resources/: cases.bib
scripts/: clear_history.sh
src/domdb/cli/: bib.py  cli.py  download.py  get.py  j2e.py  main.py  md.py
src/domdb/core/: config.py  download_verdicts.py  exceptions.py  json2bib.py  json2evid.py  model.py
src/domdb/core/converters/json2bib/: convert.py  entry.py
src/domdb/core/converters/json2evid/: __init__.py  convert.py  date_utils.py  dir_creation.py  info_utils.py  processing.py  utils.py
src/domdb/core/converters/json2md/: __init__.py  convert.py  entry.py
src/domdb/core/download/: auth.py  fetch.py  main.py  storage.py
tests/: test_cli.py  test_download_verdicts.py  test_json2bib.py  test_json2evid.py
