[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domdb"
version = "0.1.0"
description = "Tools for citing Danish judicial verdicts using BibTeX and Markdown."
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "bibtexparser",
    "pydantic",
    "numpy",
    "beautifulsoup4",
    "pdfplumber",
    "pyyaml",
    "treeparse",
    "evid",
]

[project.scripts]
domdb = "domdb.cli.main:main"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"